# llm-mcp-stack

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.proxy  GEMINI.md  LICENSE  SKILLS.md  docker-compose.yml  openai_proxy.py  openai_proxy_v2.py  pyproject.toml  start.sh  test_openai_proxy.py  test_openai_proxy_v2.py
.claude/: settings.local.json
claude-switch/: Dockerfile.test  README.md  claude-switch.sh  docker-entrypoint.sh  install.sh  probe_models.py  uninstall.sh
mcp-tests/: .gitignore  test_all_tools_single_session.py  test_fast_tools.py  test_mcp_services.py  test_mcp_tools.py  test_metamcp_all_tools.py  test_quick_all_tools.py
mcphub/: mcp_settings.json
openai-proxy/: proxy.py  proxy_sdk.py  requirements.txt  test_proxy.py  test_proxy_sdk.py
paper-search/: Dockerfile
searxng/config/: limiter.toml  settings.yml
src/llm_mcp_stack/: openai_proxy.py
tests/: test_claude_switch.py  test_openai_proxy.py
tests/mcp/: test_all_tools_single_session.py  test_fast_tools.py  test_mcp_servers.py  test_mcp_services.py  test_mcp_tools.py  test_mcphub_all_tools.py  test_quick_all_tools.py
