[project]
name = "llm-mcp-stack"
version = "0.1.0"
description = "Docker Compose stack for MCP services with an OpenAI-compatible Claude proxy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "fastapi>=0.115.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
llm-mcp-proxy = "llm_mcp_stack.openai_proxy:main"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow integration checks",
    "timeout: marks tests that may take longer than default integration latency",
]
